fic trigger pipeline

--- a/charts/onboard-datascience/templates/pipelines/kfp-upload-trigger.yaml
+++ b/charts/onboard-datascience/templates/pipelines/kfp-upload-trigger.yaml
@@ -46,12 +46,12 @@ spec:
         name: cel
       params:
       - name: filter
-        # execute only when a file within the ai-examples/fraud-detection/pipeline/ directory has changed
+        # execute only when a file within the pipeline/ directory has changed
         value: >
           body.commits.exists(c,
-            c.added.exists(f, f.startsWith('ai-examples/fraud-detection/pipeline/')) ||
-            c.modified.exists(f, f.startsWith('ai-examples/fraud-detection/pipeline/')) ||
-            c.removed.exists(f, f.startsWith('ai-examples/fraud-detection/pipeline/'))
+            c.added.exists(f, f.startsWith('pipeline/')) ||
+            c.modified.exists(f, f.startsWith('pipeline/')) ||
+            c.removed.exists(f, f.startsWith('pipeline/'))
           )
   bindings:
     - ref: pipeline-upload-binding
