--- a/gitops/onboard-datascience/values-datasciene.yaml
+++ b/gitops/onboard-datascience/values-datasciene.yaml
@@ -61,4 +61,4 @@ pipeline:
   pythonPipelineName: get_data_train_upload.py
   sourceWorkspaceSize: 2Gi
   trannigData:
-    version: NONE
+    version: 1
