--- a/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
+++ b/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
@@ -30,16 +30,7 @@ metadata:
 spec:
   serviceAccountName: pipeline
   triggers:
-    - name: extract-version-trigger
-      interceptors:
-        - ref:
-            name: cel
-          params:
-            - name: overlays
-              value:
-                - key: version_number
-                  expression: "body.commits[0].added[0].split('_')[-1].split('.')[0].replaceAll('v', '')"
-      triggerRef: pipeline-run
+    - triggerRef: pipeline-run
 ---
 apiVersion: triggers.tekton.dev/v1beta1 
 kind: Trigger 
@@ -60,6 +51,13 @@ spec:
           body.commits.exists(c,
             c.added.exists(f, f.startsWith('data/')) 
           )
+    - ref:
+        name: cel
+      params:          
+      - name: overlays
+        value:
+            - key: version_number
+              expression: "body.commits[0].added[0].split('_')[-1].split('.')[0].replaceAll('v', '')"
   bindings:
     - ref: pipeline-run-binding
   template: 
