--- a/kfp-run-pipelines-trigger.yaml
+++ b/kfp-run-pipelines-trigger.yaml
@@ -49,10 +49,9 @@ spec:
         # execute only when a file within the data/card_transdata.csv directory has changed
         value: >
           body.commits.exists(c,
-            c.added.exists(f, f.startsWith('data/card_transdata.csv')) ||
-            c.modified.exists(f, f.startsWith('data/card_transdata.csv')) ||
-            c.removed.exists(f, f.startsWith('data/card_transdata.csv'))
+            c.added.exists(f, f.startsWith('data/')) 
           )
+
   bindings:
     - ref: pipeline-run-binding
   template: 
@@ -71,6 +70,8 @@ spec:
       value: $(body)
     - name: header
       value: $(header)
+    - name: version
+      value: "1"      
 ---
 apiVersion: triggers.tekton.dev/v1beta1
 kind: TriggerTemplate
@@ -95,3 +96,5 @@ spec:
         params:
         - name: CARDTRANSDATA
           value: "https://raw.githubusercontent.com/alpha-hack-program/fraud-detection-mlops/main/data/card_transdata.csv"
+        - name: MODEL_VERSION
+          value: "$(params.version)"
