--- a/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
+++ b/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
@@ -69,6 +69,8 @@ spec:
       value: $(body)
     - name: header
       value: $(header)
+    - name: version
+      value: "1"      
 ---
 apiVersion: triggers.tekton.dev/v1beta1
 kind: TriggerTemplate
@@ -93,3 +95,5 @@ spec:
         params:
         - name: CARDTRANSDATA
           value: "https://raw.githubusercontent.com/alpha-hack-program/fraud-detection-mlops/main/data/card_transdata.csv"
+        - name: MODEL_VERSION
+          value: "$(params.version)"
