--- a/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
+++ b/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
@@ -70,7 +70,7 @@ spec:
     - name: header
       value: $(header)
     - name: version
-      value: "1"      
+      value: $(extensions.version_number)     
 ---
 apiVersion: triggers.tekton.dev/v1beta1
 kind: TriggerTemplate
