--- a/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
+++ b/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
@@ -89,6 +89,8 @@ metadata:
     triggers.tekton.dev/old-escape-quotes: "true"
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
+  params:
+  - name: version
   resourcetemplates:
     - apiVersion: tekton.dev/v1
       kind: PipelineRun
