--- a/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
+++ b/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
@@ -42,15 +42,15 @@ metadata:
 spec:
   serviceAccountName: pipeline 
   interceptors:
-    # - ref:
-    #     name: cel
-    #   params:
-    #   - name: filter
-    #     # execute only when a file within the data/card_transdata.csv directory has changed
-    #     value: >
-    #       body.commits.exists(c,
-    #         c.added.exists(f, f.startsWith('data/'))
-    #       )
+    - ref:
+        name: cel
+      params:
+      - name: filter
+        # execute only when a file within the data/card_transdata.csv directory has changed
+        value: >
+          body.commits.exists(c,
+            c.added.exists(f, f.startsWith('data/'))
+          )
     - ref:
         name: cel
       params:
