--- a/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
+++ b/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
@@ -57,7 +57,7 @@ spec:
         - name: overlays
           value:
             - key: version_number
-              expression: "body.commits[0].added[0].split('_').get(body.commits[0].added[0].split('_').size() - 1).split('.')[0].replaceAll('v', '')""
+              expression: "body.commits[0].added[0].split('_').get(body.commits[0].added[0].split('_').size() - 1).split('.')[0].replaceAll('v', '')"
 
   bindings:
     - name: version
