--- a/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
+++ b/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
@@ -57,7 +57,7 @@ spec:
         - name: overlays
           value:
             - key: version_number
-              expression: "body.commits[0].added[0].split('/').get(body.commits[0].added[0].split('/').size() - 1).split('.')[0]"
+              expression: "body.commits[0].added[0].split('/').get(1).split('.').get(0)"
 
   bindings:
     - name: version
