--- a/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
+++ b/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-trigger.yaml
@@ -57,7 +57,7 @@ spec:
         - name: overlays
           value:
             - key: version_number
-              expression: "body.commits[0].added[0].split('/')[1].split('.')[0]"
+              expression: "body.commits[0].added[0].split('/')[1].split('.')[0].replace('v', '')"
 
   bindings:
     - name: version
