--- a/gitops/onboard-datascience/values-datasciene.yaml
+++ b/gitops/onboard-datascience/values-datasciene.yaml
@@ -60,3 +60,6 @@ pipeline:
   pipelinePath: pipeline
   pythonPipelineName: get_data_train_upload.py
   sourceWorkspaceSize: 2Gi
+  github:
+    token: ChangeMe
+    user: davidseve
