--- a/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-pipeline.yaml
+++ b/charts/onboard-datascience/templates/pipelines/kfp-run-pipelines-pipeline.yaml
@@ -76,6 +76,7 @@ spec:
         spec: null
         steps:
         - name: change-inference-version
+          computeResources: {}
           image: registry.access.redhat.com/ubi8/ubi-minimal:8.3
           script: |
             #!/usr/bin/env bash
@@ -104,7 +105,7 @@ spec:
         - name: GIT_USER_EMAIL
           value: $(params.GIT_USER_EMAIL)
         - name: DELETE_EXISTING
-          value: false             
+          value: 'false'             
         - name: GIT_SCRIPT
           value: |
             cd $(workspaces.source.path)/gitops/inference
