--- a/gitops/onboard-datascience/values-datasciene.yaml
+++ b/gitops/onboard-datascience/values-datasciene.yaml
@@ -55,7 +55,7 @@ pipeline:
       scheme: http
   #Tekton pipeline
   repo: https://github.com/alpha-hack-program/fraud-detection-mlops.git
-  revision: pipeline
+  revision: HEAD
   gitSslVerify: true
   pipelinePath: pipeline
   pythonPipelineName: get_data_train_upload.py
