--- a/gitops/onboard-datascience/app-onboard-datascience.yaml
+++ b/gitops/onboard-datascience/app-onboard-datascience.yaml
@@ -18,6 +18,11 @@ spec:
       valueFiles:
       - ../../gitops/values-common.yaml
       - ../../gitops/onboard-datascience/values-datasciene.yaml
+      parameters:
+      - name: "pipeline.github.token"
+        value: "changeme_token"
+      - name: "pipeline.github.user"
+        value: "changeme_user"    
   syncPolicy:
     automated:
       prune: true
